--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,13 @@
         transform: translateY(0);
     }
 }
+
+:root {
+    --toastify-color-light: rgba(255, 255, 255, 0);
+}
+
+.Toastify__toast {
+    padding: 0;
+    margin-bottom: 0;
+    box-shadow: none;
+}
