--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,9 @@
     margin-bottom: 0;
     box-shadow: none;
 }
+
+.text-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
