--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,38 @@
+.checker-textarea::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+.checker-textarea::-webkit-scrollbar-track {
+    border-radius: 0 10px 10px 0;
+    background-color: #222;
+}
+
+.checker-textarea::-webkit-scrollbar-thumb {
+    border-radius: 0 10px 10px 0;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #222;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #7480ff;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    cursor: pointer;
+    background-color: rgba(116, 128, 255, 0.8);
+}
+
+::-webkit-scrollbar-corner {
+    background-color: #222;
+}
+
 .fadeIn {
     animation: fadeInAnimation 0.5s ease-in-out;
 }
